feat(README.md): finish developers manual